# rustplotlib

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.html  makefig.py  rustfmt.toml  search-index.js
examples/: scatter.rs  simple.rs  simple2d.rs
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/ops/: trait.Drop.js
implementors/rustplotlib/backend/: trait.Backend.js
rustplotlib/: FillBetween.t.html  enum.PlotData.html  index.html  sidebar-items.js  struct.Axes2D.html  struct.Figure.html  struct.FillBetween.html  struct.Line2D.html  struct.Scatter.html  struct.Subplots.html
rustplotlib/axes2d/: Line2D.t.html  PlotData.t.html  Scatter.t.html  enum.PlotData.html  struct.Axes2D.html  struct.FillBetween.html  struct.Line2D.html  struct.Scatter.html
rustplotlib/backend/: Matplotlib.t.html  index.html  sidebar-items.js  struct.Matplotlib.html  trait.Backend.html
rustplotlib/backend/mpl/: struct.Matplotlib.html
rustplotlib/figure/: Subplots.t.html  struct.Figure.html  struct.Subplots.html
scripts/: extract_data.py  load_pickle_fig.py  main.py  prelude.py  setup.sh
src/: axes2d.rs  backend.rs  encode.rs  figure.rs  lib.rs  plotdata.rs  scatter.rs  util.rs
src/axes2d/: mod.rs  scatter.rs
src/backend/: mod.rs  mpl.rs  mpl_file.rs  mpl_native.rs
src/rustplotlib/src/: axes2d.rs.html  figure.rs.html  lib.rs.html
src/rustplotlib/src/backend/: mod.rs.html  mpl.rs.html
