[package]
name = "rustplotlib"
version = "0.0.4"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = "A tiny library to create charts, by using matplotlib."
homepage = "https://github.com/ubnt-intrepid/rustplotlib"
repository = "https://github.com/ubnt-intrepid/rustplotlib"
documentation = "https://docs.rs/rustplotlib/"
readme = "README.md"
license = "MIT"

[features]
default = []
native = ["cpython"]

[dependencies]
rustc-serialize = "^0.3.22"
rmp-serialize = "^0.7.0"
cpython = { git = "https://github.com/dgrunwald/rust-cpython.git", optional = true }

[dev-dependencies]
rand = "^0.3.15"
