[package]
name = "rustplotlib"
version = "0.0.4"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = "A tiny library to create charts, by using matplotlib."
homepage = "https://github.com/ubnt-intrepid/rustplotlib"
repository = "https://github.com/ubnt-intrepid/rustplotlib"
documentation = "https://docs.rs/rustplotlib/"
readme = "README.md"
license = "MIT"

[features]
default = []
native = ["cpython"]

[dependencies]
cpython = { version  = "^0.1.0", optional = true }

[dev-dependencies]
